# naluexamples

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: HDSoCv2_use_extBias_for_trigger_control.ipynb  aardvarc_calibration_channel.ipynb  backend.ipynb  basic_pedetals_capture.ipynb  basic_uart_readout.ipynb  configure_ip.ipynb  data_capture.ipynb  opening_acquisitions.ipynb  opening_legacy_acquisitions.ipynb  pedestals_capture_naludaq_rs.ipynb  registers.ipynb  template.ipynb  udp_data_capture.ipynb  upac96_startup.ipynb  upac_96_capture.ipynb  upac_96_self_trigger.ipynb  wlc_mode_data_capture.ipynb
examples/HDSOCv1_evalr2_ROI/: roi_capture.ipynb
examples/advanced/: AARDVARCv3_Edge-jitter-analysis.ipynb
examples/basic/: backend.ipynb
examples/configure-ip/: README.md  configure-ip-ftdi.ipynb  configure-ip-udp.ipynb  connect-to-new-ip.ipynb
examples/hiper/: HIPeR_debug.ipynb  HiPER_data_readout.ipynb  HiPER_serial_data.ipynb  HiPER_startup_&_registers.ipynb
examples/upac96/: upac96_startup.ipynb  upac_96_capture.ipynb  upac_96_self_trigger.ipynb
examples/whisper/: baseline-analysis.ipynb  noise-analysis.ipynb  preprocessing.ipynb  timing-analysis.ipynb
examples/whisper/toolbox/: __init__.py
examples/whisper/toolbox/baseline/: baseline.py
examples/whisper/toolbox/data/: utils.py
examples/whisper/toolbox/filters/: __init__.py  analysis_pipeline.py  array_builder.py  events.py  steps.py  (+7 more)
scripts/udp/: README.md  helpers.py  init_board.py  run_scripts.bat  start_capture.py  stop_capture.py
src/naluexamples/helpers/: plotting.py
(+7 files in other folders)
