[project]
name = "naluexamples"
authors = [
  # Current authors
  { name="Marcus Luck", email="marcus@naluscientific.com" },
  { name="Mitchell Matsumori-Kelly", email="mitchell@naluscientific.com" },
  { name="Alvin Yang", email="alvin@naluscientific.com" },
]
description = "Example code for using Nalu Scientific's software"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
  "naludaq>=0.17.2",
  "naluconfigs>=10.3",
  "ftd3xx>=1.0",
  "naludaq_rs>=0.1.5",
  "deprecation",
  "ftd2xx>=1.1.2",
  "h5py",
  "numpy<1.24",
  "pyserial==3.4",
  "pyyaml>=5.1.1",
  "scikit-learn==1.1.3",
  "requests",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock",
  "pytest-xdist",
  "pytest-sugar"
]

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "naluexamples._version.__version__"}
